try to fix button safari

--- a/styles.css
+++ b/styles.css
@@ -1270,6 +1270,9 @@ input[type=text], input[type=button], input[type=submit] {
 }
 
 .btn, input[type=submit] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background-color: black !important;
   color: #c2f08e;
   text-decoration: none;
